
    Livestatus:
    * 0988 FIX: livedump: Fix exception in case no contact groups are defined for a service

    HW/SW-Inventory:
    * 0625 hw/sw inventory now reads the kernel version and architecture for linux and windows
    * 0627 lnx_video, win_video: added inventory function and agent for linux video cards, modified windows inventory function
    * 0167 FIX: mk_inventory.linux: Changed field separator from pipe to tab...
    * 1005 FIX: Fix exception when using pretty-print output format
    * 0946 FIX: hw/sw inventory: fixed display bug for byte fields with the value 0...


1.2.5i4:
    Core & Setup:
    * 0940 SEC: Fixed various core SIGSEGV when using malformed livestatus queries...

    Checks & Agents:
    * 0812 nginx_status: New check for monitoring status information of the Nginx web server...
    * 0986 citrix_licenses: new check for monitoring Citrix licenses
    * 0814 Agent versions can now be checked with "at least version X" parameters...
    * 0815 mysql_slave: New check for monitoring MySQL slave sync state
    * 0617 adva_fsp_if: new check to monitor interfaces of the ADVA FSP 3000 scalable optical transport solution
    * 0618 adva_fsp_current: new check for the power supply units of the ADVA FSP 3000 scalable optical transport solution
    * 0619 adva_fsp_temp: new check to monitor temperature and temperature trends on ADVA scalable optical transport solutions
    * 0993 raritan_pdu_inlet: now delivers performance data
    * 0624 fc_port: new check for fibre channel devices supporting the FCMGMT MIB
    * 1003 ibm_svc_enclosure: support new firmware, also check fan modules
    * 0616 FIX: brocade.fan, brocade.power, brocade.temp: will now only discover services which are not marked as absent
    * 0992 FIX: zfs_arc_cache: returns OK even if values of arc meta are missing...
    * 0936 FIX: agent_ibmsvc: improved error messages on using wrong credentials
    * 0621 FIX: zfsget: better filesystem selection and calculation of sizes...