@@ -1,0 +1,8 @@
+Title: improvements to windows sw/hw inventory (encoding, more details for sw inventory)
+Level: 1
+Component: inv
+Version: 1.2.5i5
+Date: 1404766640
+Class: feature
+
+
